remove center tag (not supported in HTML5)

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -127,11 +127,11 @@
                         <br /><br />
                         <p style="text-align: center; color: #25398e;">مهندس بُداقی 09144406496</p>
                         <br />
-                        <center>
+                        <div style="text-align: center">
                         <a href="https://t.me/Aychichak">
                         	<img alt="عضویت در کانال تلگرام آی چیچک" src="images/joinToTelegram.jpg" class="telegramJoinImg" />
 						</a>
-                   		</center>
+                        </div>
                     </div>
                 </div>
             </div>
