--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
                         <br />
                         <p style="text-align: center; color: #25398e;">مهندس بُداقی 09144406496</p>
                         <br />
-                        <center>
-                            <a href="https://t.me/Aychichak" style="width: auto; margin: auto">
+                        <div style="text-align: center">
+                            <a href="https://t.me/Aychichak" style="width: auto; margin: auto;text-align: center;background-color: #8a79f3">
                                 <img alt="عضویت در کانال تلگرام آی چیچک" src="images/joinToTelegram.jpg" class="telegramJoinImg" />
                             </a>
-                        </center>
+                        </div>
                     </div>
                 </div>
             </div>
